<resources>
    <string name="app_name">Epi-Diet</string>
    <string name="title_home">Home</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_stats">Stats</string>
    <string name="button_go_to_form">Calculate</string>
    <string name="button_show_recipes">Show recipe</string>
    <string name="label_height">Height</string>
    <string name="input_height_hint">Put your height here</string>
    <string name="input_weight_hint">Put your weight here</string>
    <string name="label_weight">Weight</string>
    <string name="input_age_hint">Put your age here</string>
    <string name="label_age">Age</string>
    <string name="label_gender">Gender</string>
    <string name="radio_button_female">Female</string>
    <string name="radio_button_male">Male</string>
    <string name="user_portrait_content_desc">User portrait or avatar</string>
    <string name="greetings">Welcome</string>
    <string name="input_username_hint">Put your username here</string>
    <string name="label_username">Your name</string>
    <string name="button_do_calculate">Calculate</string>
    <string name="label_bmi">Your BMI</string>
    <string name="label_calories">Safe calories</string>
    <string name="snack_wrong_data">Wrong or missing data</string>
    <string name="recipe_salad">Salad</string>
    <string name="recipe_chips">Fish &amp; Chips</string>
    <string name="loading">Loading…</string>
    <string name="title_recipe">Recipe just for you!</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="quiz_end_header">This is the end</string>
    <string name="quiz_summary">It took you %1$d shots to answer %2$d questions.</string>
    <string name="quiz_restart">Restart quiz</string>
    <string name="pie">Pie</string>
    <string name="bar">Bar</string>
    <string name="polar">Polar</string>
</resources>
