<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplicationexample.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_recipeFragment"
            app:destination="@id/recipeFragment" />
        <action
            android:id="@+id/action_navigation_home_to_formFragment"
            app:destination="@id/formFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.myapplicationexample.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.myapplicationexample.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.example.myapplicationexample.ui.home.RecipeFragment"
        android:label="@string/button_show_recipes"
        tools:layout="@layout/fragment_recipe" />
    <fragment
        android:id="@+id/formFragment"
        android:name="com.example.myapplicationexample.ui.home.FormFragment"
        android:label="@string/button_go_to_form"
        tools:layout="@layout/fragment_form" >
        <action
            android:id="@+id/action_formFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>